--- a/bundles/code/org.eclipse.fx.code.editor.fx.themes/css/highlight.css
+++ b/bundles/code/org.eclipse.fx.code.editor.fx.themes/css/highlight.css
@@ -8,16 +8,19 @@
 	-fx-cursor: hand !important;
 }
 
-.invisible-char {
+.styled-text-area .invisible-char {
 	-fx-fill: darkgray;
 }
-.invisible-char.space {
+
+.styled-text-area .invisible-char.space {
 	-fx-content: "\u00B7";
 }
-.invisible-char.tab {
+
+.styled-text-area .invisible-char.tab {
 	-fx-content: "\u21E5";
 }
-.invisible-char.enter {
+
+.styled-text-area .invisible-char.enter {
 	-fx-content: "\u21B5";
 }
 
